@@ -18,6 +18,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -52,6 +53,8 @@ public class SecurityConfig {
             "/member-activity/**",
             "/contract-document/**",
             "/background/**",
+            "/ws/**",
+            "/**",
             "/ticket-purchase/**",
             "/transaction/**",
             "/payment/**"
@@ -108,10 +111,10 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173")); // Chỉ cho phép request từ frontend
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Các phương thức HTTP được phép
-        configuration.setAllowedHeaders(List.of("*")); // Cho phép tất cả headers
-        configuration.setAllowCredentials(true); // Cho phép gửi credentials (nếu cần)
+        configuration.setAllowedOrigins(Arrays.asList("https://localhost:5173")); // React frontend
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
